--- a/Web/package.json
+++ b/Web/package.json
@@ -2,7 +2,7 @@
   "name": "deploy",
   "version": "0.0.1",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "license": "MIT",
   "dependencies": {
