--- a/Web/package.json
+++ b/Web/package.json
@@ -1,6 +1,10 @@
 {
   "name": "deploy",
   "version": "0.0.1",
+  "main": "index.js",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "start": "node index.js"
   },
