fix iframe setting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,10 +41,10 @@
     "**/*.meta": true,
     "**/*.prefab": true,
     "**/*.unity": true,
-    "build/": true,
-    "Build/": true,
-    // "Library/": true,
-    // "library/": true,
+    // "build/": true,
+    // "Build/": true,
+    "Library/": true,
+    "library/": true,
     "obj/": true,
     "Obj/": true,
     "ProjectSettings/": true,
