simple game and test with opensea

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,8 +41,8 @@
     "**/*.meta": true,
     "**/*.prefab": true,
     "**/*.unity": true,
-    // "build/": true,
-    // "Build/": true,
+    "build/": true,
+    "Build/": true,
     "Library/": true,
     "library/": true,
     "obj/": true,
