--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,62 +1,61 @@
 {
-  "files.exclude": {
-    "**/.DS_Store": true,
-    "**/.git": true,
-    "**/.gitmodules": true,
-    "**/*.booproj": true,
-    "**/*.pidb": true,
-    "**/*.suo": true,
-    "**/*.user": true,
-    "**/*.userprefs": true,
-    "**/*.unityproj": true,
-    "**/*.dll": true,
-    "**/*.exe": true,
-    "**/*.pdf": true,
-    "**/*.mid": true,
-    "**/*.midi": true,
-    "**/*.wav": true,
-    "**/*.gif": true,
-    "**/*.ico": true,
-    "**/*.jpg": true,
-    "**/*.jpeg": true,
-    // "**/*.png": true,
-    "**/*.psd": true,
-    "**/*.tga": true,
-    "**/*.tif": true,
-    "**/*.tiff": true,
-    "**/*.3ds": true,
-    "**/*.3DS": true,
-    "**/*.fbx": true,
-    "**/*.FBX": true,
-    "**/*.lxo": true,
-    "**/*.LXO": true,
-    "**/*.ma": true,
-    "**/*.MA": true,
-    "**/*.obj": true,
-    "**/*.OBJ": true,
-    "**/*.asset": true,
-    "**/*.cubemap": true,
-    "**/*.flare": true,
-    "**/*.mat": true,
-    "**/*.meta": true,
-    "**/*.prefab": true,
-    "**/*.unity": true,
-    "build/": true,
-    "Build/": true,
-    "Library/": true,
-    "library/": true,
-    "obj/": true,
-    "Obj/": true,
-    "ProjectSettings/": true,
-    "temp/": true,
-    "Temp/": true
-  },
-  "dotnet.defaultSolution": "Klaymakers 2023.sln",
-  "editor.insertSpaces": true,
-  "editor.formatOnPaste": true,
-  "editor.formatOnSave": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
-  }
+    "files.exclude": {
+        "**/.DS_Store": true,
+        "**/.git": true,
+        "**/.gitmodules": true,
+        "**/*.booproj": true,
+        "**/*.pidb": true,
+        "**/*.suo": true,
+        "**/*.user": true,
+        "**/*.userprefs": true,
+        "**/*.unityproj": true,
+        "**/*.dll": true,
+        "**/*.exe": true,
+        "**/*.pdf": true,
+        "**/*.mid": true,
+        "**/*.midi": true,
+        "**/*.wav": true,
+        "**/*.gif": true,
+        "**/*.ico": true,
+        "**/*.jpg": true,
+        "**/*.jpeg": true,
+        "**/*.psd": true,
+        "**/*.tga": true,
+        "**/*.tif": true,
+        "**/*.tiff": true,
+        "**/*.3ds": true,
+        "**/*.3DS": true,
+        "**/*.fbx": true,
+        "**/*.FBX": true,
+        "**/*.lxo": true,
+        "**/*.LXO": true,
+        "**/*.ma": true,
+        "**/*.MA": true,
+        "**/*.obj": true,
+        "**/*.OBJ": true,
+        "**/*.asset": true,
+        "**/*.cubemap": true,
+        "**/*.flare": true,
+        "**/*.mat": true,
+        "**/*.meta": true,
+        "**/*.prefab": true,
+        "**/*.unity": true,
+        "build/": true,
+        "Build/": true,
+        "Library/": true,
+        "library/": true,
+        "obj/": true,
+        "Obj/": true,
+        "ProjectSettings/": true,
+        "temp/": true,
+        "Temp/": true
+    },
+    "dotnet.defaultSolution": "klayfarm.sln",
+    "editor.insertSpaces": true,
+    "editor.formatOnPaste": true,
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": true
+    }
 }
