--- a/App/package.json
+++ b/App/package.json
@@ -2,10 +2,15 @@
   "name": "app",
   "version": "0.0.1",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "license": "MIT",
   "dependencies": {
+    "ethers": "^5.7.2",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
