--- a/App/vercel.json
+++ b/App/vercel.json
@@ -3,6 +3,10 @@
     {
       "source": "/(.*)",
       "destination": "/"
+    },
+    {
+      "source": "/api/items",
+      "destination": "/api/items"
     }
   ]
 }
